--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ egui-sf2g = "0.4"
 sf2g.version = "0.4"
 sf2g.features = ["text"]
 sf2g-xt = "0.4"
-libmpv-sys = { git = "https://github.com/crumblingstatue/libmpv-rs.git", features = ["use-bindgen"] }
+libmpv-sys = { git = "https://github.com/crumblingstatue/libmpv-rs.git" }
 rand = "0.9.0"
 egui-file-dialog = "0.10.0"
 shell-words = "1.1.0"
